--- a/src/pages/Module/SingleGrid.css
+++ b/src/pages/Module/SingleGrid.css
@@ -20,6 +20,51 @@
     pointer-events: auto !important;
 }
 
+.textarea-icon {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
+
+.file-icon {
+    width: 100%;
+    border-radius: 5px;
+    padding: 5px;
+    text-align: center;
+    border: 1px dashed #000;
+    cursor: pointer;
+}
+
+.img {
+    display: block;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px dashed #000;
+}
+
+.file-options {
+    padding-bottom: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.file-options label {
+    flex-grow: 1;
+}
+
+.file-options .btn {
+    padding: 0 10px;
+    width: fit-content;
+}
+
+.file-options .btn:nth-child(1) {
+    padding: 0 10px 0 0;
+}
+
 @media screen and (max-width: 800px) {
     .block .input.fullWidth {
         height: 300px;
