--- a/src/pages/Module/styles.css
+++ b/src/pages/Module/styles.css
@@ -4,12 +4,22 @@
 }
 
 .main .content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     height: 100%;
     width: 100%;
-    justify-items: center;
-    padding-top: 25px;
+    min-height: 100vh;
+}
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-size: 20px;
+}
+
+.loading p {
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 800px) {
