Fixed base64 page styling issue

--- a/src/pages/Base64Image/style.css
+++ b/src/pages/Base64Image/style.css
@@ -44,7 +44,7 @@
         width: 95vw;
     }
 
-    .block .input.fullWidth {
+    .block .fullWidth {
         flex: auto;
         height: 300px;
     }
