--- a/src/pages/HashGenerator/style.css
+++ b/src/pages/HashGenerator/style.css
@@ -50,4 +50,10 @@
         width: 100%;
         min-height: auto;
     }
+
+    .block1,
+    .block2 {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
