Switched 2 pages to bootstrap

--- a/src/pages/Base64Image/style.css
+++ b/src/pages/Base64Image/style.css
@@ -35,6 +35,11 @@
     flex-grow: 1;
 }
 
+.btn {
+    display: flex;
+    align-items: center;
+}
+
 @media screen and (max-width: 800px) {
     .grid {
         position: relative;
