--- a/src/pages/Index/style.css
+++ b/src/pages/Index/style.css
@@ -5,35 +5,14 @@
     min-height: 100vh;
 }
 
-.logo svg path {
-    stroke-width: 2px;
-    stroke-dasharray: 500;
-    stroke-dashoffset: 500;
-    animation: animateLogo 2s linear forwards, fillPath 0.5s 2s linear forwards;
-    stroke-dashoffset: 1000;
-}
-
-.logo {
-    width: fit-content;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-    margin-top: 50px;
-    max-width: 95vw;
-}
-
-.logo svg {
-    width: 100%;
+.title {
+    text-align: center;
+    margin-top: 15px;
 }
 
 .motto {
-    position: relative;
-    left: 50%;
     text-align: center;
     margin-top: 15px;
-    opacity: 0;
-    pointer-events: none;
-    animation: show 0.25s 2s linear forwards;
 }
 
 .tools {
@@ -45,10 +24,6 @@
     position: relative;
     left: 50%;
     transform: translate(-50%);
-    opacity: 0;
-    pointer-events: none;
-    animation: show 0.5s 2s linear forwards;
-    overflow: visible;
 }
 
 .tools .tool {
@@ -64,12 +39,6 @@
     transform: translate(-50%);
 }
 
-.tools .tool .icon,
-.tools .tool .image {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-}
 
 .tools .tool .image {
     width: 100px;
@@ -85,38 +54,4 @@
     text-align: center;
     text-transform: capitalize;
     margin-top: 5px;
-}
-
-@keyframes animateLogo {
-    from {
-        stroke-dashoffset: 500;
-    }
-
-    to {
-        stroke-dashoffset: 1000;
-    }
-}
-
-@keyframes fillPath {
-    from {
-        fill: transparent;
-    }
-
-    to {
-        fill: #000;
-    }
-}
-
-@keyframes show {
-    from {
-        opacity: 0;
-        pointer-events: none;
-        transform: translateX(-50%) translateY(100px);
-    }
-
-    to {
-        opacity: 1;
-        pointer-events: auto;
-        transform: translateX(-50%) translateY(0);
-    }
 }
