--- a/src/pages/DateToUnix/style.css
+++ b/src/pages/DateToUnix/style.css
@@ -1,14 +1,29 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 100%;
+  min-height: 90%;
   width: 100%;
   padding: 10px;
   gap: 10px;
 }
 
+.top_header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  /* height: 70px; */
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.heading {
+  font-size: x-large;
+}
+
 .block {
-  height: 95vh;
+  height: 90vh;
 }
 
 .block1 {
