--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -29,6 +29,18 @@ body {
 html {
   height: -webkit-fill-available;
 }
+.img{
+  height: 50px;
+  width: 50px;
+  
+  margin-bottom: 5px;
+ 
+  transform: rotate(35deg);
+
+  
+  
+  
+}
 
 main {
   height: 100vh;
