add format configs

--- a/src/pages/SQLFormatter/style.css
+++ b/src/pages/SQLFormatter/style.css
@@ -1,6 +1,13 @@
-#queryInput {
-  resize: none;
-  overflow: hidden;
-  min-height: 50px;
+label {
+  font-size: medium;
+  align-items: start;
+}
+
+.inner_input_group {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  /* justify-content: center;
+  align-items: center; */
+  gap: 5px;
 }
