--- a/src/style.css
+++ b/src/style.css
@@ -29,13 +29,13 @@ button.mdc-top-app-bar__navigation-icon {
   height: 87vh;
 }
 
-.block1 {
+/* .block1 {
   padding-right: 10px;
 }
 
 .block2 {
   padding-left: 10px;
-}
+} */
 
 .input.fullWidth {
   height: 100%;
