--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,8 @@ button.mdc-top-app-bar__navigation-icon {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 90%;
+  height: 90vh;
+  overflow: hidden;
   width: 100%;
   padding: 10px;
   gap: 10px;
@@ -27,6 +28,7 @@ button.mdc-top-app-bar__navigation-icon {
 
 .block {
   height: 87vh;
+  overflow: auto;
 }
 
 /* .block1 {
