--- a/src/pages/MarkdownPreview/style.css
+++ b/src/pages/MarkdownPreview/style.css
@@ -1,3 +1,13 @@
 #markdownInput {
   display: none;
 }
+
+#tokenInput {
+  height: 73vh;
+}
+
+@media screen and (max-width: 800px) {
+  #tokenInput {
+    height: 40vh;
+  }
+}
