--- a/src/pages/SQLFormatter/style.css
+++ b/src/pages/SQLFormatter/style.css
@@ -11,3 +11,11 @@ label {
   align-items: center; */
   gap: 5px;
 }
+
+.toggler {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
