--- a/src/pages/Index/style.css
+++ b/src/pages/Index/style.css
@@ -1,28 +1,23 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .img {
-    height: 80px;
-    width: 60px;
-
-    margin-bottom: 5px;
-
-    transform: rotate(35deg);
-    
-    
-    
+  height: 50px;
+  width: 50px;
+  /* margin-bottom: 5px; */
+  /* transform: rotate(35deg); */
 }
 
 .h1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
