--- a/highlight.js/styles/a11y-dark.css
+++ b/highlight.js/styles/a11y-dark.css
@@ -1,4 +1,4 @@
-/* a11y-dark theme */
+/* atom-one-dark theme */
 /* Based on the Tomorrow Night Eighties theme: https://github.com/isagalaev/highlight.js/blob/master/src/styles/tomorrow-night-eighties.css */
 /* @author: ericwbailey */
 
