--- a/src/pages/JsonFormatter/style.css
+++ b/src/pages/JsonFormatter/style.css
@@ -1,14 +1,23 @@
-.copy {
-    color: rgb(12, 214, 12);
-    font-size: 20px;
-    padding-top: 10px;
+/* .copy {
+  color: rgb(12, 214, 12);
+  font-size: 20px;
+  padding-top: 10px;
 }
 .text {
-    font-size: 12px;
-
+  font-size: 12px;
 }
 .btn {
-    height: 30px;
-    margin-top: 10px;
-    padding-bottom: 30px;
+  height: 30px;
+  margin-top: 10px;
+  padding-bottom: 30px;
+} */
+
+#inputTextArea {
+  height: 63vh;
+}
+
+@media screen and (max-width: 800px) {
+  #inputTextArea {
+    height: 40vh;
+  }
 }
